I18n Switch Issue When Gimbal and Rotation Manipulator On #34621

Closed
opened 2013-03-13 05:18:30 +01:00 by Leon Cheung · 5 comments
Member

%%%--- Operating System, Graphics card ---

Win XP (32 bit)
Ubuntu 12.04 )32 bit)
No problem with 64 bit systems

- Blender version with error, and version that worked ---

2.66 / 2.66a / Today's official daily builds

- Short description of error ---

It seems something about the 32 bit version, as well as the i18n module?
It seems only occur after switching UI language(s).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Please see attachment, try dragging in the "white circle" area to rotate it, when releasing LMB, blender will shut down immediately. %%%

%%%--- Operating System, Graphics card --- Win XP (32 bit) Ubuntu 12.04 )32 bit) No problem with 64 bit systems - Blender version with error, and version that worked --- 2.66 / 2.66a / Today's official daily builds - Short description of error --- It seems something about the 32 bit version, as well as the i18n module? It seems only occur after switching UI language(s). - Steps for others to reproduce the error (preferably based on attached .blend file) --- Please see attachment, try dragging in the "white circle" area to rotate it, when releasing LMB, blender will shut down immediately. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Here is the backtrace (using official linux 32bit 2.66a release):

Program received signal SIGSEGV, Segmentation fault.
0x091a58a5 in BLF_pgettext ()
(gdb) bt

  • 0 0x091a58a5 in BLF_pgettext ()
  • 1 0x091a5973 in BLF_translate_do_iface ()
  • 2 0x08e564fb in RNA_property_ui_name ()
  • 3 0x08cfd75f in uiDefAutoButsRNA ()
  • 4 0x08d2a09b in uiLayoutOperatorButs ()
  • 5 0x08a67d9b in ?? ()
  • 6 0x08a67e90 in ?? ()
  • 7 0x08ccb41b in ED_region_panels ()
  • 8 0x08a604d6 in ?? ()
  • 9 0x08cca9dc in ED_region_do_draw ()
  • 10 0x08a1cdbb in ?? ()
  • 11 0x08a1da48 in wm_draw_update ()
  • 12 0x08a0a798 in WM_main ()
  • 13 0x08a04faa in main ()

Unfortunately, I can’t build 32bit here, so it’s hard to understand why BLF_pgettext() segfaults (should be pretty safe... :/ ).

Anyway, core problem is not with i18n, but with TRANSFORM_OT_trackball operator, wher for some really odd reason, automatic op drawer generates (at the end) trailing "ghosts" properties like constraint_orientation &co (which are never defined for this op). Still investigating what’s happening here :(
%%%

%%%Here is the backtrace (using official linux 32bit 2.66a release): Program received signal SIGSEGV, Segmentation fault. 0x091a58a5 in BLF_pgettext () (gdb) bt - 0 0x091a58a5 in BLF_pgettext () - 1 0x091a5973 in BLF_translate_do_iface () - 2 0x08e564fb in RNA_property_ui_name () - 3 0x08cfd75f in uiDefAutoButsRNA () - 4 0x08d2a09b in uiLayoutOperatorButs () - 5 0x08a67d9b in ?? () - 6 0x08a67e90 in ?? () - 7 0x08ccb41b in ED_region_panels () - 8 0x08a604d6 in ?? () - 9 0x08cca9dc in ED_region_do_draw () - 10 0x08a1cdbb in ?? () - 11 0x08a1da48 in wm_draw_update () - 12 0x08a0a798 in WM_main () - 13 0x08a04faa in main () Unfortunately, I can’t build 32bit here, so it’s hard to understand *why* BLF_pgettext() segfaults (should be pretty safe... :/ ). Anyway, core problem is not with i18n, but with TRANSFORM_OT_trackball operator, wher for some really odd reason, automatic op drawer generates (at the end) trailing "ghosts" properties like constraint_orientation &co (which are never defined for this op). Still investigating what’s happening here :( %%%

%%%Fixed in r55245 (I hope... would be cool if you could test ;) ). Thanks for the report.%%%

%%%Fixed in r55245 (I hope... would be cool if you could test ;) ). Thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Fix confirmed for XP 32bit. not tested for Ubuntu yet. But thank you so much! :)%%%

%%%Fix confirmed for XP 32bit. not tested for Ubuntu yet. But thank you so much! :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34621
No description provided.